Reduced code smells to < 6