@@ -1,11 +1,15 @@
 package com.example.devopsproj.service.implementations;
 
 import com.example.devopsproj.commons.enumerations.EnumRole;
+import com.example.devopsproj.exceptions.NotFoundException;
+import com.example.devopsproj.exceptions.RepositoryCreationException;
+import com.example.devopsproj.exceptions.RepositoryDeletionException;
 import com.example.devopsproj.model.GitRepository;
-import com.example.devopsproj.dto.responseDto.GitRepositoryDTO;
+import com.example.devopsproj.dto.responsedto.GitRepositoryDTO;
 import com.example.devopsproj.model.Project;
 import com.example.devopsproj.repository.GitRepositoryRepository;
 import com.example.devopsproj.service.interfaces.GitRepositoryService;
+import java.util.Collections;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.*;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
@@ -16,7 +20,6 @@ import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class GitRepositoryServiceImpl implements GitRepositoryService {
@@ -30,7 +33,8 @@ public class GitRepositoryServiceImpl implements GitRepositoryService {
 
     private static final String API_BASE_URL = "https://api.github.com";
     private static final String USER_REPOS_ENDPOINT = "/user/repos";
-    private static final String REPOS_ENDPOINT = "/repos/Bindushree-0906";
+    private static final String REPOS_ENDPOINT = "/repos/sahilanna";
+
 
     private static final String GITHUB_ACCESS_TOKEN = System.getenv("GITHUB_ACCESS_TOKEN");
 
@@ -58,10 +62,11 @@ public class GitRepositoryServiceImpl implements GitRepositoryService {
 
         if (responseEntity.getStatusCode() == HttpStatus.CREATED) {
             GitRepository createdGitRepository = responseEntity.getBody();
+            assert createdGitRepository != null;
             gitRepositoryRepository.save(createdGitRepository);
             return createdGitRepository;
         } else {
-            throw new RuntimeException("Error creating repository " + gitRepository.getName() + ". Response: " + responseEntity.getBody());
+            throw new RepositoryCreationException("Error creating repository " + gitRepository.getName() + ". Response: " + responseEntity.getBody());
         }
     }
 
@@ -70,11 +75,9 @@ public class GitRepositoryServiceImpl implements GitRepositoryService {
     public List<GitRepositoryDTO> getAllRepositories() {
         List<GitRepository> gitRepositories = gitRepositoryRepository.findAll();
 
-        List<GitRepositoryDTO> gitRepositoriesDTO = gitRepositories.stream()
+        return gitRepositories.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
-
-        return gitRepositoriesDTO;
+                .toList();
     }
 
     @Override
@@ -82,8 +85,6 @@ public class GitRepositoryServiceImpl implements GitRepositoryService {
     public void deleteRepository(Long repoId) {
         GitRepository repository = gitRepositoryRepository.findByRepoId(repoId)
                 .orElseThrow(() -> new RuntimeException("Repository not found with repoId: " + repoId));
-
-        String repoName = repository.getName(); // Get the repository name from the entity
 
         HttpHeaders headers = new HttpHeaders();
         headers.setBearerAuth(GITHUB_ACCESS_TOKEN);
@@ -99,14 +100,14 @@ public class GitRepositoryServiceImpl implements GitRepositoryService {
                     Void.class);
 
             if (responseEntity.getStatusCode() != HttpStatus.NO_CONTENT) {
-                throw new RuntimeException("Error deleting repository with repoId " + repoId + ". Response: " + responseEntity.getBody());
+                throw new RepositoryDeletionException("Error deleting repository with repoId " + repoId + ". Response: " + responseEntity.getBody());
             }
 
             gitRepositoryRepository.delete(repository);
         } catch (HttpClientErrorException.NotFound e) {
-            throw new RuntimeException("Repository with repoId " + repoId + " not found.", e);
+            throw new NotFoundException("Repository with repoId " + repoId + " not found.");
         } catch (Exception e) {
-            throw new RuntimeException("Error deleting repository with repoId " + repoId, e);
+            throw new RepositoryDeletionException("Error deleting repository with repoId " + repoId);
         }
     }
 
@@ -115,21 +116,19 @@ public class GitRepositoryServiceImpl implements GitRepositoryService {
         Project project = projectServiceImpl.getProjectById(id).orElse(null);
         if(project != null){
             List<GitRepository> repositories = gitRepositoryRepository.findRepositoriesByProject(project);
-            List<GitRepositoryDTO> gitRepositoryDTOS = repositories.stream()
+            return repositories.stream()
                     .map(repository -> new GitRepositoryDTO(repository.getName(), repository.getDescription()))
-                    .collect(Collectors.toList());
-            return gitRepositoryDTOS;
+                    .toList();
         }
-        else return null;
+        else return Collections.emptyList();
     }
 
     @Override
     public List<GitRepositoryDTO> getAllReposByRole(EnumRole enumRole) {
         List<GitRepository> gitRepositories = gitRepositoryRepository.findAllByRole(enumRole);
-        List<GitRepositoryDTO> gitRepositoryDTOS = gitRepositories.stream()
+        return gitRepositories.stream()
                 .map(repository -> new GitRepositoryDTO(repository.getRepoId(), repository.getName(), repository.getDescription()))
-                .collect(Collectors.toList());
-        return gitRepositoryDTOS;
+                .toList();
     }
 
     @Override
@@ -141,29 +140,6 @@ public class GitRepositoryServiceImpl implements GitRepositoryService {
 
     // ---- Other methods ------
 
-    public boolean isAccessTokenValid(String accessToken) {
-        HttpHeaders headers = new HttpHeaders();
-        headers.setBearerAuth(accessToken);
-
-        HttpEntity<String> requestEntity = new HttpEntity<>(headers);
-
-        ResponseEntity<String> responseEntity = restTemplate.exchange(
-                "https://api.github.com/user",
-                HttpMethod.GET,
-                requestEntity,
-                String.class);
-
-        if (responseEntity.getStatusCode() == HttpStatus.OK) {
-            // Check if the user has the required permissions to delete repositories
-            String responseBody = responseEntity.getBody();
-            // Parse the response and check the user's permissions
-            // Here, you can check if the "delete_repo" permission is present or any other permissions as needed
-            // If the user has the required permissions, return true
-            // Otherwise, return false
-        }
-
-        return false;
-    }
 
     private GitRepositoryDTO convertToDto(GitRepository gitRepository) {
         // Perform the mapping logic from GitRepository to GitRepositoryDTO
